# TACR-CPP

./: CMakeLists.txt  CMakeUserPresets.json  EigenMatrix.md  LICENSE
Qtgui/: CMakeLists.txt  widget.cpp  widget.h  widget.txt  widget.ui
TACR-CPP/: CMakeLists.txt  TACR-CPP.cpp  TACR-CPP.h
includes/: TACR.h  TACR2.h
src/: CMakeLists.txt  TACR.cpp  TACR.txt  TACR2.cpp  TACR_ann_bsmftc.txt  main.cpp
